@@ -193,12 +193,7 @@ sub commit
 		$self->set_value( "rev_number", ($self->get_value( "rev_number" )||0) + 1 );	
 	}
 
-	$self->tidy;
-	my $rv = $self->{session}->get_database->update(
-			$self->{dataset},
-			$self->{data} );
-	
-	$self->queue_changes;
+	my $rv = $self->SUPER::commit( $force );
 
 	# Need to update all children in case ancesors have changed.
 	# This is pretty slow esp. For a top level subject, but subject
