@@ -488,14 +488,8 @@ sub commit
 		$self->set_value( "rev_number", ($self->get_value( "rev_number" )||0) + 1 );	
 	}
 
-	my $user_ds = $self->{session}->get_repository->get_dataset( "user" );
-	$self->tidy;
-	my $success = $self->{session}->get_database->update(
-		$user_ds,
-		$self->{data} );
+	my $success = $self->SUPER::commit( $force );
 	
-	$self->queue_changes;
-
 	return( $success );
 }
 
